@@ -21,6 +21,7 @@ version 0.7.10 - Not released, available at https://svn.sourceforge.net/svnroot/
 		population::appendLocus
   - NEW: add genoStruTrait::locusByName, genoStruTrait::lociByName
   - NEW: swig 1.3.32 compatibility
+  - NEW: add scripts/loadHapMap.py
 
 
 version 0.7.9 - (Rev 885) Apr 3, 2007
